Another trigger branch for final modifications (see mantis issue 2224 for instance)